// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Listbox matches the snapshot (multiselect) 1`] = `
<DocumentFragment>
  .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:hover {
  background-color: #DBDEE1;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c11:hover {
  background-color: #DBDEE1;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #B7BBC2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c13:hover {
  background-color: transparent;
}

.c0 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c1 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c7 {
  color: #FFFFFF;
  height: 100%;
  width: 100%;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: var(--spacing-1x);
  width: var(--size-1x);
}

.c5:hover {
  background-color: #DBDEE1;
  border: 1px solid #000000;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: var(--spacing-1x);
  width: var(--size-1x);
}

.c12:hover {
  background-color: #DBDEE1;
  border: 1px solid #000000;
}

.c12 > .c6 {
  display: none;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #B7BBC2;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: var(--spacing-1x);
  width: var(--size-1x);
}

.c14:hover {
  background-color: #F1F2F2;
  border: 1px solid #B7BBC2;
}

.c14 > .c6 {
  display: none;
}

.c3 .c4 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c8 {
  -webkit-align-items: anchor-center;
  -webkit-box-align: anchor-center;
  -ms-flex-align: anchor-center;
  align-items: anchor-center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: var(--spacing-1quarterx);
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9::after {
  content: attr(data-text);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  overflow: hidden;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  visibility: hidden;
}

.c10 {
  color: #60666E;
  display: block;
  font-size: 0.75rem;
  line-height: 2rem;
}

<div
    aria-multiselectable="true"
    class="c0 react-datepicker-ignore-onclickoutside"
    data-testid="listbox-container"
    id="uuid1"
    role="listbox"
    tabindex="0"
  >
    <ul
      class="c1"
      data-testid="listbox-list"
      role="presentation"
    >
      <li
        aria-selected="true"
        class="c2 c3 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
        data-testid="listitem-optionA"
        id="uuid1_optionA"
        role="option"
      >
        <span
          class="c4 c5"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check c6 c7"
            fill="none"
            focusable="false"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
        >
          <span
            class="c9"
            data-text="Option A"
          >
            Option A
            <span
              class="c10 react-datepicker-ignore-onclickoutside"
            >
              The first one
            </span>
          </span>
        </span>
      </li>
      <li
        aria-selected="false"
        class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
        data-testid="listitem-optionB"
        id="uuid1_optionB"
        role="option"
      >
        <span
          class="c4 c12"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check c6 c7"
            fill="none"
            focusable="false"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
        >
          <span
            class="c9"
            data-text="Option B"
          >
            Option B
          </span>
        </span>
      </li>
      <li
        aria-selected="true"
        class="c2 c3 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
        data-testid="listitem-optionC"
        id="uuid1_optionC"
        role="option"
      >
        <span
          class="c4 c5"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check c6 c7"
            fill="none"
            focusable="false"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
        >
          <span
            class="c9"
            data-text="Option C"
          >
            Option C
          </span>
        </span>
      </li>
      <li
        aria-disabled="true"
        aria-selected="false"
        class="c13 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
        data-testid="listitem-optionD"
        id="uuid1_optionD"
        role="option"
      >
        <span
          class="c4 c14"
          disabled=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check c6 c7"
            fill="none"
            focusable="false"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
        >
          <span
            class="c9"
            data-text="Option D"
          >
            Option D
          </span>
        </span>
      </li>
      <li
        aria-selected="false"
        class="c11 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
        data-testid="listitem-optionE"
        id="uuid1_optionE"
        role="option"
      >
        <span
          class="c4 c12"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check c6 c7"
            fill="none"
            focusable="false"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="c8 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
        >
          <span
            class="c9"
            data-text="Option E"
          >
            Option E
          </span>
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Listbox matches the snapshot 1`] = `
<DocumentFragment>
  .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:hover {
  background-color: #DBDEE1;
}

.c2::before {
  background-color: #006296;
  content: '';
  display: block;
  height: 100%;
  left: 0;
  position: absolute;
  visibility: hidden;
  width: 4px;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6:hover {
  background-color: #DBDEE1;
}

.c6::before {
  background-color: #006296;
  content: '';
  display: block;
  height: 100%;
  left: 0;
  position: absolute;
  visibility: visible;
  width: 4px;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #B7BBC2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: var(--size-1halfx);
  min-height: var(--size-1halfx);
  padding: var(--spacing-half) var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7:hover {
  background-color: transparent;
}

.c7::before {
  background-color: #006296;
  content: '';
  display: block;
  height: 100%;
  left: 0;
  position: absolute;
  visibility: hidden;
  width: 4px;
}

.c0 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-height: 160px;
  overflow-y: auto;
  padding: var(--spacing-half) 0;
  position: relative;
  z-index: 1000;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c1 {
  height: 100%;
  list-style-type: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.c3 {
  -webkit-align-items: anchor-center;
  -webkit-box-align: anchor-center;
  -ms-flex-align: anchor-center;
  align-items: anchor-center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: var(--spacing-1quarterx);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4::after {
  content: attr(data-text);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  overflow: hidden;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  visibility: hidden;
}

.c5 {
  color: #60666E;
  display: block;
  font-size: 0.75rem;
  line-height: 2rem;
}

<div
    class="c0 react-datepicker-ignore-onclickoutside"
    data-testid="listbox-container"
    id="uuid1"
    role="listbox"
    tabindex="0"
  >
    <ul
      class="c1"
      data-testid="listbox-list"
      role="presentation"
    >
      <li
        aria-selected="false"
        class="c2 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
        data-testid="listitem-optionA"
        id="uuid1_optionA"
        role="option"
      >
        <span
          class="c3 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
        >
          <span
            class="c4"
            data-text="Option A"
          >
            Option A
            <span
              class="c5 react-datepicker-ignore-onclickoutside"
            >
              The first one
            </span>
          </span>
        </span>
      </li>
      <li
        aria-selected="true"
        class="c6 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
        data-testid="listitem-optionB"
        id="uuid1_optionB"
        role="option"
      >
        <span
          class="c3 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
        >
          <span
            class="c4"
            data-text="Option B"
          >
            Option B
          </span>
        </span>
      </li>
      <li
        aria-selected="false"
        class="c2 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
        data-testid="listitem-optionC"
        id="uuid1_optionC"
        role="option"
      >
        <span
          class="c3 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
        >
          <span
            class="c4"
            data-text="Option C"
          >
            Option C
          </span>
        </span>
      </li>
      <li
        aria-disabled="true"
        aria-selected="false"
        class="c7 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
        data-testid="listitem-optionD"
        id="uuid1_optionD"
        role="option"
      >
        <span
          class="c3 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
        >
          <span
            class="c4"
            data-text="Option D"
          >
            Option D
          </span>
        </span>
      </li>
      <li
        aria-selected="false"
        class="c2 react-datepicker-ignore-onclickoutside eds-Listbox-listItem"
        data-testid="listitem-optionE"
        id="uuid1_optionE"
        role="option"
      >
        <span
          class="c3 react-datepicker-ignore-onclickoutside eds-Listbox-listItemContent"
        >
          <span
            class="c4"
            data-text="Option E"
          >
            Option E
          </span>
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
